--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -147,15 +147,36 @@
                 android:id="@+id/messageTypeCard"
                 android:layout_marginBottom="30dp"
                 app:cardBackgroundColor="#EFEDED">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="40dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="0dp"
+                    app:cardBackgroundColor="#0000FFFF"
+                    android:layout_gravity="center_vertical|start"
+                    android:layout_marginStart="10dp"
+                    android:layout_height="40dp"
+                    android:clickable="true"
+                    android:id="@+id/modeChangeCard"
+                    android:foreground="?attr/selectableItemBackgroundBorderless">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/text"
+                        android:layout_gravity="center"
+                        android:id="@+id/mode"/>
+                </androidx.cardview.widget.CardView>
                 <EditText
-                    android:layout_width="250dp"
+                    android:layout_width="220dp"
                     android:layout_height="wrap_content"
                     android:background="#0000FFFF"
                     android:hint="Type your message here"
                     android:textSize="14sp"
+                    android:layout_marginStart="55dp"
                     android:id="@+id/messageBox"
                     android:maxHeight="230dp"
-                    android:padding="20dp"/>
+                    android:paddingTop="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp"/>
                 <androidx.cardview.widget.CardView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
