--- a/app/src/main/res/layout/chat_items.xml
+++ b/app/src/main/res/layout/chat_items.xml
@@ -21,6 +21,23 @@
             android:padding="10dp"
             android:id="@+id/left_chat_text"
             android:textColor="@color/white"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:padding="20dp"
+            android:visibility="gone"
+            android:id="@+id/imageCard"
+            app:cardCornerRadius="20dp"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:id="@+id/imageView"/>
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
