--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -118,6 +118,7 @@
                 android:id="@+id/settingIcon"
                 android:layout_gravity="center"/>
         </com.google.android.material.card.MaterialCardView>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -208,7 +209,6 @@
         android:background="@drawable/settings_bottomsheet"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         android:elevation="200dp"
-        android:visibility="gone"
         android:id="@+id/settings_bottomsheet">
         <androidx.cardview.widget.CardView
             android:layout_width="50dp"
@@ -236,6 +236,338 @@
                 android:src="@drawable/close"
                 android:layout_gravity="center" />
         </com.google.android.material.card.MaterialCardView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="vertical"
+            android:layout_marginTop="70dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="0dp"
+                        android:id="@+id/photoCard"
+                        app:cardBackgroundColor="#DFDFDF"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginVertical="5dp">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/profileImage"
+                            android:src="@drawable/person"
+                            android:layout_gravity="center" />
+                    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Person Name"
+                        android:textStyle="bold"
+                        android:textSize="13sp"
+                        android:layout_toRightOf="@id/photoCard"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginStart="25dp"
+                        android:id="@+id/nameText"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="example@email.com"
+                        android:layout_below="@id/nameText"
+                        android:layout_toRightOf="@id/photoCard"
+                        android:layout_marginStart="25dp"
+                        android:textSize="10sp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="#808080"
+                        android:id="@+id/emailText"/>
+                </RelativeLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+<!--            <ImageView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0.5dp"-->
+<!--                android:layout_marginHorizontal="30dp"-->
+<!--                android:src="@drawable/divider"/>-->
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/account_settings"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/accountSettingsIcon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/accountSettingsIcon"
+                        android:layout_marginStart="20dp"
+                        android:text="Account Settings"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/save"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/savedChatsIcon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/savedChatsIcon"
+                        android:layout_marginStart="20dp"
+                        android:text="Saved Chats"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                android:layout_marginTop="25dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/appearance"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/appearanceIcon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/appearanceIcon"
+                        android:layout_marginStart="20dp"
+                        android:text="Appearance"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <ImageView
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/info" />
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/privacy"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginStart="40dp"
+                    android:id="@+id/privacyIcon"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/privacyIcon"
+                    android:layout_marginStart="20dp"
+                    android:text="Privacy Information"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/info" />
+        </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/help"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/helpIcon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/helpIcon"
+                        android:layout_marginStart="20dp"
+                        android:text="Help"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/info" />
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:id="@+id/cardShareToFriends"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/share"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/inviteIcon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/inviteIcon"
+                        android:layout_marginStart="20dp"
+                        android:text="Invite Your Friends"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
     </FrameLayout>
 
 
