--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -248,6 +248,7 @@
                 app:cardBackgroundColor="#0000FFFF"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
+                android:id="@+id/profileInfoCard"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
                 <RelativeLayout
@@ -397,6 +398,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
                 android:clickable="true"
+                android:id="@+id/appearance"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -442,6 +444,7 @@
                 app:cardBackgroundColor="#0000FFFF"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
+                android:id="@+id/privacyCard"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -486,6 +489,7 @@
                 app:cardElevation="0dp"
                 app:cardBackgroundColor="#0000FFFF"
                 android:layout_height="wrap_content"
+                android:id="@+id/helpCard"
                 app:cardCornerRadius="20dp"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
@@ -570,5 +574,187 @@
         </LinearLayout>
     </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:elevation="400dp"
+        android:id="@+id/infoCard"
+        android:background="@drawable/settings_bottomsheet"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_height="5dp"
+            app:cardBackgroundColor="#B1B1B1"
+            app:cardCornerRadius="10dp"/>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
+            android:id="@+id/closeInfoCard"
+            app:strokeWidth="1dp"
+            app:strokeColor="#ADADAD"
+            app:cardBackgroundColor="#0000FFFF"
+            android:layout_gravity="center_horizontal|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="35dp">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:id="@+id/closeInfoIcon"
+                android:src="@drawable/close_extra"
+                android:layout_gravity="center" />
+        </com.google.android.material.card.MaterialCardView>
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="50dp"
+            android:id="@+id/infoCardIcon"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAlignment="center"
+            android:padding="30dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/infoCardText"
+            android:layout_marginTop="110dp"/>
+    </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:elevation="500dp"
+        android:id="@+id/profileInfoSheet"
+        android:background="@drawable/settings_bottomsheet"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    <androidx.cardview.widget.CardView
+        android:layout_width="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_height="5dp"
+        app:cardBackgroundColor="#B1B1B1"
+        app:cardCornerRadius="10dp"/>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp"
+        android:id="@+id/closeProfileInfoCard"
+        app:strokeWidth="1dp"
+        app:strokeColor="#ADADAD"
+        app:cardBackgroundColor="#0000FFFF"
+        android:layout_gravity="center_horizontal|end"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="35dp">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/close_extra"
+            android:layout_gravity="center" />
+    </com.google.android.material.card.MaterialCardView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                app:cardCornerRadius="60dp"
+                app:cardElevation="5dp"
+                android:clickable="true"
+                android:id="@+id/profileImgCard"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/profileImg"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginTop="10dp"
+                android:text="Click on profile photo to change it"
+                android:textColor="#808080"
+                app:layout_constraintTop_toBottomOf="@id/profileImgCard"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/changePhotoText"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:layout_marginHorizontal="50dp"
+                android:maxLength="55"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/changePhotoText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/firstNameEditText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="First Name"
+                android:textSize="14sp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="10dp"
+                android:maxLength="55"
+                app:layout_constraintTop_toBottomOf="@id/firstNameEditText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/lastNameEditText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Last Name"
+                android:textSize="14sp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:layout_marginHorizontal="50dp"
+                android:maxLength="55"
+                android:enabled="false"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/emailEditText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Email"
+                android:textSize="14sp"/>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@id/emailEditText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="20dp"
+                android:textColor="@color/white"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
