--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -626,7 +626,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="580dp"
         android:elevation="500dp"
         android:id="@+id/profileInfoSheet"
         android:background="@drawable/settings_bottomsheet"
@@ -643,7 +643,7 @@
         android:layout_height="40dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="0dp"
-        android:id="@+id/closeProfileInfoCard"
+        android:id="@+id/closeProfileInfoSheet"
         app:strokeWidth="1dp"
         app:strokeColor="#ADADAD"
         app:cardBackgroundColor="#0000FFFF"
@@ -659,7 +659,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp">
+            android:layout_marginTop="40dp">
             <androidx.cardview.widget.CardView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
@@ -748,13 +748,33 @@
                 android:layout_height="wrap_content"
                 android:text="Save"
                 android:layout_marginHorizontal="50dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="40dp"
+                android:id="@+id/saveButton"
+                app:layout_constraintVertical_bias="0"
                 app:layout_constraintTop_toBottomOf="@id/emailEditText"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="20dp"
                 android:textColor="@color/white"/>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Logout"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#0000FFFF"
+                android:elevation="0dp"
+                app:elevation="0dp"
+                app:strokeWidth="1dp"
+                android:id="@+id/logoutButton"
+                app:strokeColor="@android:color/holo_red_light"
+                app:layout_constraintTop_toBottomOf="@id/saveButton"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0"
+                android:textColor="@android:color/holo_red_light"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
