--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,6 +183,7 @@
                 app:cardElevation="5dp"
                 android:id="@+id/facebookCard"
                 app:cardBackgroundColor="#1877F2"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/googleCard"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -480,4 +481,70 @@
                 android:textSize="14sp"/>
         </com.google.android.material.card.MaterialCardView>
     </androidx.cardview.widget.CardView>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:background="@drawable/settings_bottomsheet"
+            android:id="@+id/forgotPassBottomSheet"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            android:elevation="200dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_height="5dp"
+                app:cardBackgroundColor="#B1B1B1"
+                app:cardCornerRadius="10dp"/>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+                android:id="@+id/closeBottomSheet"
+                app:strokeWidth="1dp"
+                app:strokeColor="#ADADAD"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_gravity="center_horizontal|end"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="35dp">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/close_extra"
+                    android:layout_gravity="center" />
+            </com.google.android.material.card.MaterialCardView>
+
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:maxLength="55"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginTop="80dp"
+                android:id="@+id/emailForgotPass"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Email"
+                android:textSize="14sp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonReset"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:text="Send Email"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginTop="140dp"
+                app:layout_constraintHorizontal_bias="0.505"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/emailEditText" />
+        </FrameLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
